Add logout functionality to market page

--- a/mobile/4-Market/market.html
+++ b/mobile/4-Market/market.html
@@ -572,6 +572,23 @@ document.addEventListener("DOMContentLoaded", () => {
     if (admin && user) {
         homeLink.href = `/BeeMazing-A1/mobile/2-UserProfiles/userAdmin.html?admin=${encodeURIComponent(admin)}&user=${encodeURIComponent(user)}`;
     }
+
+    // Logout button functionality
+    const logoutBtn = document.getElementById("logoutBtn");
+    if (logoutBtn) {
+        console.log("Logout button found, adding event listener");
+        logoutBtn.addEventListener("click", () => {
+            console.log("Logout button clicked");
+            // Only remove login session info
+            localStorage.removeItem("isAdmin");
+            localStorage.removeItem("userData");
+            localStorage.removeItem("adminPassword");
+            // Keep currentAdminEmail as per home.js
+            window.location.href = "/BeeMazing-A1/login.html";
+        });
+    } else {
+        console.error("Logout button not found");
+    }
 });
 
 
